--- a/section-04-research-and-development/titanic-assignment/03-titanic-survival-pipeline-assignment.ipynb
+++ b/section-04-research-and-development/titanic-assignment/03-titanic-survival-pipeline-assignment.ipynb
@@ -840,7 +840,18 @@
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.8.20' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/bin/python3.8 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "# set up the pipeline\n",
     "titanic_pipe = Pipeline([\n",
@@ -1433,7 +1444,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1447,7 +1458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.20"
   },
   "toc": {
    "base_numbering": 1,
